# embodied-turtle-vision

./: README.md
src/discrete_controller/: CMakeLists.txt  package.xml
src/discrete_controller/src/: minimal_publisher.cpp  signal_to_cmd_vel.cpp
src/embodied_turtle_vision/: setup.cfg  setup.py
src/embodied_turtle_vision/embodied_turtle_vision/: computer_vision_subscriber.py
topics/embodied_turtle_vision/: package.xml  requirements.txt
topics/embodied_turtle_vision/embodied_turtle_vision/: computer_vision_subscriber.py
